Correct visible part on event route if not logged

--- a/client/login/login.import.styl
+++ b/client/login/login.import.styl
@@ -45,6 +45,10 @@
     line-height: normal
     color: #000
 
+    &#login-popup1
+      right: 10px
+
+
     .input
       margin-bottom: 15px
 
